# cpau

./: .gitignore  .readthedocs.yaml  API_DESIGN.md  README.md  baseapp.py  claude.org  cpau-electric  cpau-electric.bash  cpau-electric.py  pyproject.toml  pytest.ini  requirements.txt
cpau_api/: __init__.py  electric_meter.py  session.py
dev-tools/: skeleton.py
dev-tools/electric/: all_interval_requests.json  analyze_api.py  api_responses.json  capture_all_intervals.py  capture_requests.py  capture_working_request.py  captured_requests.json  check_ui_data.py  debug_login.py  explore_intervals.py  explore_intervals_auto.py  find_availability_windows.py  find_csrf_token.py  inspect_daily_data.py  inspect_hourly.py  interval_requests_auto.json  scrape_cpau.py  script_output.txt  test_cpau_api.py
dev-tools/water/: API_FINDINGS.md  AUTHENTICATION_FINDINGS.md  INSTALLATION_GUIDE.md  PHASE2_FINDINGS.md  PHASE2_SUMMARY.md  explore_auth_standalone.py  explore_authentication.py  explore_with_playwright.py  test_cookie_lifetime.py  test_cookies_with_requests.py  test_headless.py  water_meter.py  watersmart_session.py
docs/: api_design.md  development_history.org
docs/sphinx/: README.md  conf.py  index.rst
docs/sphinx/api/: electric_meter.rst  exceptions.rst  session.rst  water_meter.rst
src/cpau/: cli.py  water_meter.py  watersmart_session.py
src/cpau_api/: cli.py  electric_meter.py  meter.py
test/electric/: test_api.py  test_api_dates.py  test_data_availability.py  test_date_ranges.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: electric_responses.py  water_responses.py
(+3 files in other folders)
