[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpau-api"
version = "0.1.0"
description = "Python library and CLI tools for City of Palo Alto Utilities meter data"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "CPAU API Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "coloredlogs>=15.0",
    "humanfriendly>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "mypy",
    "types-requests",
]

[project.scripts]
cpau-electric = "cpau_api.cli:main_electric"

[project.urls]
Homepage = "https://github.com/yourusername/cpau-api"
Repository = "https://github.com/yourusername/cpau-api.git"
Issues = "https://github.com/yourusername/cpau-api/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cpau_api = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
